add load data and do some corrections

--- a/QueryArango/configs/configElliptic.json
+++ b/QueryArango/configs/configElliptic.json
@@ -32,7 +32,8 @@
   },
 
   "queryTriangles": {
-    "startVertex": "txId/230593839"
+    "action": "Action3",
+    "collection": "txId"
   },
 
   "queryShortPath": {
