--- a/QueryArango/configs/configMooc.json
+++ b/QueryArango/configs/configMooc.json
@@ -32,7 +32,8 @@
   },
 
   "queryTriangles": {
-    "startVertex": "User/6956"
+    "action": "Action",
+    "collection": "Target"
   },
 
   "queryShortPath": {
